# BankSearch

./: .gitignore  LICENSE  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
banksearch/: asgi.py  settings.py  urls.py  wsgi.py
search/: urls.py  views.py
search/static/search/css/: main.css
search/templates/search/: about.html  base.html  contact.html  index.html  search.html
