[tool.poetry]
name = "banksearch"
version = "0.1.0"
description = "Bank detail search using Django and mongoDB"
authors = ["Ranjeet Singh <techonerd1.0@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
